package Exceptions;

class CustomException extends RuntimeException {
    public CustomException(String message) {
        super(message);
    }
}
